--- a/weatherapp-back/package.json
+++ b/weatherapp-back/package.json
@@ -1,17 +1,25 @@
 {
   "name": "weatherapp-back",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend server for weather app",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dekel Ashush",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
